changed default icon size

--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,3 @@
-main.c
-main.o
-main
-tests
-tests.c
 fbprint
 bmp2header
 *.bmp
@@ -10,3 +5,4 @@ CMakeFiles/
 cmake_install*
 CMakeCache.txt
 install_manifest.txt
+imagens/*
