Auto compile icons

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -2,6 +2,8 @@ cmake_minimum_required (VERSION 2.8.11)
 project (fbprint)
 
 include_directories(include)
+include_directories(icons)
+
 add_executable(fbprint
   fbprint.c
   bitmap.c
@@ -12,4 +14,10 @@ add_executable(bmp2header
   bitmap.c
   )
 
+add_custom_target(ICONS
+        COMMAND ${CMAKE_CURRENT_SOURCE_DIR}/install-icons.sh 
+        )
+add_dependencies(fbprint ICONS)
+
 install(TARGETS fbprint bmp2header DESTINATION bin)
+
